--- a/fronts/template/index.html
+++ b/fronts/template/index.html
@@ -1,87 +1,126 @@
+
 <!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>信纳克</title>
-   <meta name="description" content="">
-   <meta name="author" content="">
-   <!--#include virtual="./common/static.html"-->
+<html>
+<head lang="en">
+    <meta charset="UTF-8">
+    <title>xx</title>
+    <meta name="keywords" content=""/>
+    <meta name="description" content=""/>
+    <meta name="viewport"  content="width=device-width"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta name="renderer" content="webkit"/>
+    <meta http-equiv="Cache-Control" content="no-transform " />
+    <link rel="shortcut icon" type="image/ioc" href="/favicon.ico"/>
+    <link rel="stylesheet" href="./static/css/reset.css"/>
+    <link rel="stylesheet" href="./statics/css/common.css">
 </head>
 <body>
-	<!--#include virtual="./common/header.html"-->
-	<div class="main-wrapper"  id="home-page">
-		<div class="banner animate   ">
-			<div class="text">Advancing Cellular Technologies and Therapeutics...</div>
-		</div>
-		<div class="news-events-wapper">
-			<h3>NEWS / EVENTS</h3>
-			<div class="async-news-list"><div class="tac pt50">loadding...</div></div>
-			<!-- <div class="one">
-				<div class="date">   <date>Mar 19,2018</date></div>
-				<div class="description">
-					<a href="#">Avalon GloboCare Submits Listing Application for The NASDAQ Capital Market</a>
-				</div>
-			</div> -->
-			 
-			<div class="more-3d-wper   ">
-				<a href="https://ir.avalon-globocare.com/press-releases"    class="more-btn"></a>
-			</div>
-		</div>	
-	</div>
-	<!-- CORE PLATFORMS -->
-	<div class="home-core-wrapper">
-		<div class="bg-big">
-			<h3>CORE PLATFORMS</h3>
-			<div class="description lighter">
-				Operating through our core platforms,  <br>
-				Avalon’s “Technology + Service” ecosystem <br>
-				covers the areas of regenerative medicine,<br> 
-				cell-based immunotherapy, exosome technology, <br>
-				as well as rehabilitation medicine.
-			</div>
-		</div>
-		<div class="blue-row">
-			<ul class="ul-4-animate">
-				<li><a href="technology.html"><em class="ioc4-0"><var></var></em>Exosome Technologies</a></li>
-				<li><a href="technology.html#AvalonCell"><em class="ioc4-1"><var></var></em>Avalon Cell</a></li>
-				<li><a href="technology.html#AvalonRehab"><em class="ioc4-2"><var></var></em>Avalon Rehab</a></li>
-				<li><a href="technology.html#HealthcareFacility"><em class="ioc4-3"><var></var></em>Healthcare Facility</a></li>
-			</ul>
-			<span></span>
-			<span class="ioc1"></span>
-			<span class="ioc2"></span>
-		</div>	
-	</div>
-	<!-- ABOUT US -->
-	<div class="about-us-wrapper">
-		<h3>ABOUT US</h3>
-		<h5><a href="aboutus.html#MISSIONVISION">Mission & Vision</a></h5>
-		<ul class="ul-ioc">
-			<li><span class="lighter">A premiere</span> healthcare management provider & biotechnology developer</li>
-			<li><span  class="lighter">Dedicated to </span>integrating & managing global healthcare resources</li>
-			<li><span  class="lighter">Empowering </span>high-impact biomedical innovations</li>
-			<li><span  class="lighter">Engaging in </span>bio-venture investment</li>
-		</ul>
-		<div class="forth-io">
-			<a href="aboutus.html#CORPORATEOVERVIEW" class="c1">Corporate Overview</a>
-			<a href="aboutus.html#MANAGEMENT" class="c2">Management</a>
-			<a href="aboutus.html#CODEOFCONDUCT" class="c3">Code of Conduct</a>
-			<a href="aboutus.html#BOARDOFDIRECTORS" class="c4">Board of Directors</a>
-		</div>
-	</div>
-	<!--#include virtual="./common/footer.html"-->
-	<!--#include virtual="./common/script.html"--> 
-
-	 <script type="text/javascript">
-	 	$(function(){
-			randomBannerBg();
-			homeBanner();
-			//randomRoate();
-			randomIocShow();
-			asyncNewsList("./data.json"); //新闻列表
-		})
-	 </script>
-	
-
+    <header>
+        <div class="top-info">
+            <div>
+                <a href="login.html">登录</a>
+                <span>/</span>
+                <a href="register.html">退出</a>
+            </div>
+        </div>
+        <div class="logo-wrapper">
+            <div class="logo-text">
+                <a href="/"><img src="./statics/imgs/logo.png" alt="logo"></a>
+                <div class="log-text">
+                    <div class="ti">信纳克（北京）</div>
+                    <div class="desc">生化标志物检测医学有限公司</div>
+                </div>
+            </div>
+            <div class="other-logos">
+                <a href="#"><img src="./statics/imgs/h2.png" alt=""></a>
+                <a href="#"><img src="./statics/imgs/h1.png" alt=""></a>
+            </div>
+        </div>
+        <div class="navigator-wrapper">
+            <ul>
+                <li><a href="home.html">首页</a></li>
+                <li><a href="intro.html">信纳克简介</a></li>
+                <li>
+                    <a href="events.html">道赔流式大事件</a>
+                    <ul>
+                        <a href="events-1.html">大事件-1</a>
+                        <a href="events-1.html">大事件-2</a>
+                        <a href="events-1.html">大事件-4</a>
+                    </ul>
+                </li>
+                <li><a href="flowCourse.html">流式讲堂</a></li>
+                <li><a href="server.html">信纳克服务</a></li>
+                <li><a href="linkus.html">联系我们</a></li>
+            </ul>
+        </div>
+    </header>
+    <section class="main-wrapper">
+        <!-- banner -->
+        <div class="banner-wrapper">
+            <div class="items">
+                <a href="#"><img src="./statics/imgs/banner.jpg" alt=""></a>
+            </div>
+            <div class="dir"></div>
+            <div class="pager"></div>
+        </div>
+        <!-- 要闻 -->
+        <div class="news-wrapper">
+            <div class="g-arrow-bar">
+                <span>要闻</span>
+                <a href="news.html">...</a>
+            </div>
+            <div class="news-list">
+                <div class="item"><span>2019-04-12</span><span>辛纳克实验室通过CAP认证</span></div>
+                <div class="item"><span>2019-04-12</span><span>辛纳克实验室通过CAP认证</span></div>
+                <div class="item"><span>2019-04-12</span><span>辛纳克实验室通过CAP认证</span></div>
+            </div>
+        </div>
+        <div class="vip-wrapper">
+            <div class="g-arrow-bar">
+                <span>VIP专区</span>
+            </div>
+            <div class="four-box">
+                <a href="#" class="box-media">音频视频</a>
+                <a href="#" class="box-elec">电子讲义</a>
+                <a href="#" class="box-book">信纳克用户手册</a>
+                <a href="#" class="box-flow">流式案例解析</a>
+            </div>
+        </div>
+        <div class="three-box">
+            <div class="item">
+                <div class="g-arrow-bar">
+                    <span>信纳克培训服务</span>
+                </div>
+                <ul>
+                    <li><a href="#">信纳克研讨会日程</a></li>
+                    <li><a href="#">信纳克定期</a></li>
+                </ul>
+            </div>
+            <div class="item">
+                <div class="g-arrow-bar">
+                    <span>信纳克其他服务</span>
+                </div>
+                <ul>
+                    <li><a href="#">信纳克咨询服务</a></li>
+                    <li><a href="#">信纳克临床前研究服务</a></li>
+                </ul>
+            </div>
+            <div class="item">
+                <div class="g-arrow-bar">
+                    <span>信纳克临床检测服务</span>
+                </div>
+                <ul>
+                    <li><a href="#">道陪检查手册</a></li>
+                    <li><a href="#">道赔流式检测项目</a></li>
+                </ul>
+            </div>
+        </div>
+    </section>
+    <footer>
+        <div class="copy-right">
+            <p>©️2019&nbsp;&nbsp;信纳克全称&nbsp;&nbsp;版权所有</p>
+            <p>京ICP 备xxxxx</p>
+        </div>
+    </footer>
 </body>
 </html>
